--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 14:05:05 2018</p>
+         Last Run: Tue Nov 13 15:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,9 +34,9 @@
                         <td>2</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>21</td>
+                        <td>19</td>
                         <td>WNW</td>
                         <td>1</td>
                      </tr>
@@ -44,11 +44,11 @@
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>1</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>66</td>
+                        <td>-3</td>
+                        <td>3</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>WNW</td>
                         <td>1</td>
                      </tr>
@@ -58,9 +58,9 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>3</td>
                      </tr>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-4",
+                 "-3",
                  "-4"
                ]
              },
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "2",
+                 "3",
                  "3"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
                  "66",
-                 "70"
+                 "68",
+                 "71"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 14:05:05 2018</p>
+         Last Run: Tue Nov 13 15:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 14:05:05 2018</p>
+         Last Run: Tue Nov 13 15:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -479,39 +479,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
-                        <td>0</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>56</td>
-                        <td>1</td>
-                        <td>14</td>
-                        <td>W</td>
-                        <td>20</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>52</td>
-                        <td>1</td>
-                        <td>14</td>
-                        <td>W</td>
-                        <td>19</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Clear</td>
-                        <td>2</td>
-                        <td>-2</td>
-                        <td>2</td>
-                        <td>49</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>19</td>
+                        <td>43</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>3</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>47</td>
+                        <td>1</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>48</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>4</td>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>44</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>W</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
                  "-2",
-                 "-2"
+                 "0",
+                 "1"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
                  "2",
-                 "2"
+                 "3",
+                 "4"
                ]
              }
            ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "52",
-                 "49"
+                 "51",
+                 "47",
+                 "44"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
-                 "19",
-                 "19"
+                 "43",
+                 "48",
+                 "52"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 14:05:05 2018</p>
+         Last Run: Tue Nov 13 15:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -697,36 +697,36 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>2</td>
-                        <td>67</td>
+                        <td>4</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>49</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>2</td>
+                        <td>4</td>
                         <td>68</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>48</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>2</td>
-                        <td>68</td>
+                        <td>4</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>48</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2"
+                 "4",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
                  "68",
-                 "68"
+                 "68",
+                 "70"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "48",
-                 "48"
+                 "47",
+                 "47",
+                 "49"
                ]
              }
            ]
