--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 15:05:06 2018</p>
+         Last Run: Tue Nov 13 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>2</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>19</td>
                         <td>WNW</td>
@@ -45,7 +45,7 @@
                         <td>Clear</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>68</td>
                         <td>0</td>
                         <td>16</td>
@@ -57,12 +57,12 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>3</td>
-                        <td>71</td>
+                        <td>2</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>3</td>
+                        <td>13</td>
+                        <td>WNW</td>
+                        <td>1</td>
                      </tr>
                   </tbody>
                </table>
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "3",
-                 "3"
+                 "2",
+                 "2"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
+                 "64",
                  "68",
-                 "71"
+                 "70"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "1",
                  "1",
-                 "3"
+                 "1"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 15:05:06 2018</p>
+         Last Run: Tue Nov 13 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -246,8 +246,8 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-13</td>
-                        <td>-17</td>
+                        <td>-12</td>
+                        <td>-16</td>
                         <td>6</td>
                         <td>85</td>
                         <td>0</td>
@@ -258,9 +258,9 @@
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-15</td>
-                        <td>6</td>
+                        <td>-10</td>
+                        <td>-14</td>
+                        <td>5</td>
                         <td>81</td>
                         <td>0</td>
                         <td>6</td>
@@ -270,9 +270,9 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-8</td>
-                        <td>-12</td>
-                        <td>5</td>
+                        <td>-7</td>
+                        <td>-11</td>
+                        <td>4</td>
                         <td>73</td>
                         <td>0</td>
                         <td>8</td>
@@ -285,7 +285,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>4</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -317,9 +317,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-17",
-                 "-15",
-                 "-12",
+                 "-16",
+                 "-14",
+                 "-11",
                  "-9"
                ]
              },
@@ -330,9 +330,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-13",
-                 "-11",
-                 "-8",
+                 "-12",
+                 "-10",
+                 "-7",
                  "-5"
                ]
              }
@@ -392,8 +392,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "6",
                  "5",
+                 "4",
                  "4"
                ]
              },
@@ -406,7 +406,7 @@
                  "85",
                  "81",
                  "73",
-                 "64"
+                 "65"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 15:05:06 2018</p>
+         Last Run: Tue Nov 13 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -487,7 +487,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -499,7 +499,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>48</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -509,9 +509,9 @@
                         <td>2</td>
                         <td>44</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>52</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "48",
-                 "52"
+                 "42",
+                 "46",
+                 "51"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 15:05:06 2018</p>
+         Last Run: Tue Nov 13 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,7 +698,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -721,11 +721,11 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>4</td>
-                        <td>70</td>
+                        <td>5</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>49</td>
                      </tr>
                   </tbody>
@@ -826,7 +826,7 @@
                "data":[
                  "4",
                  "4",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "67",
                  "68",
-                 "68",
-                 "70"
+                 "69"
                ]
              },
              {
