--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 16:05:03 2018</p>
+         Last Run: Tue Nov 13 17:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>2</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>19</td>
                         <td>WNW</td>
@@ -46,7 +46,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>16</td>
                         <td>WNW</td>
@@ -57,11 +57,11 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>2</td>
-                        <td>70</td>
+                        <td>3</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>1</td>
                      </tr>
                   </tbody>
@@ -162,7 +162,7 @@
                "data":[
                  "2",
                  "2",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "68",
-                 "70"
+                 "66",
+                 "70",
+                 "73"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 16:05:03 2018</p>
+         Last Run: Tue Nov 13 17:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>85</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -261,10 +261,10 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>5</td>
-                        <td>81</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -273,7 +273,7 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -282,10 +282,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-5</td>
-                        <td>-9</td>
-                        <td>4</td>
-                        <td>65</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>3</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -320,7 +320,7 @@
                  "-16",
                  "-14",
                  "-11",
-                 "-9"
+                 "-7"
                ]
              },
              {
@@ -333,7 +333,7 @@
                  "-12",
                  "-10",
                  "-7",
-                 "-5"
+                 "-4"
                ]
              }
            ]
@@ -394,7 +394,7 @@
                  "6",
                  "5",
                  "4",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "81",
-                 "73",
-                 "65"
+                 "84",
+                 "79",
+                 "71",
+                 "64"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 16:05:03 2018</p>
+         Last Run: Tue Nov 13 17:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -487,7 +487,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>42</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -495,7 +495,7 @@
                         <td>3</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
@@ -507,7 +507,7 @@
                         <td>4</td>
                         <td>1</td>
                         <td>2</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
@@ -621,8 +621,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "51",
-                 "47",
-                 "44"
+                 "48",
+                 "45"
                ]
              },
              {
@@ -631,7 +631,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "42",
+                 "41",
                  "46",
                  "51"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 16:05:03 2018</p>
+         Last Run: Tue Nov 13 17:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>67</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>47</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>47</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>49</td>
+                        <td>WSW</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "68",
-                 "69"
+                 "69",
+                 "69",
+                 "70"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "47",
-                 "49"
+                 "48",
+                 "49",
+                 "51"
                ]
              }
            ]
